-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8, 11, 17, 20, 21, 22
-
Component/s: client-libs
-
b16
-
windows
Reported by Clang:
src\java.desktop\windows\native\libawt\windows\awt_MenuItem.cpp(712,22): warning: cast to 'unsigned short *' from smaller integer type 'WCHAR' (aka 'unsigned short') [-Wint-to-pointer-cast]
mii.dwTypeData = (LPTSTR)(*sb);
^~~~~~~~~~~~~
src\java.desktop\windows\native\libawt\windows\awt_MenuItem.cpp(712,22): warning: cast to 'unsigned short *' from smaller integer type 'WCHAR' (aka 'unsigned short') [-Wint-to-pointer-cast]
mii.dwTypeData = (LPTSTR)(*sb);
^~~~~~~~~~~~~
- causes
-
JDK-8359889 java/awt/MenuItem/SetLabelTest.java inadvertently triggers clicks on items pinned to the taskbar
-
- Resolved
-
- relates to
-
JDK-8340551 Remove MF_STRING from AwtMenu::AddItem
-
- Open
-