8311113: Remove invalid pointer cast and clean up setLabel() in awt_MenuItem.cpp

Reviewed-by: aivanov, serb